--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resp.js">-
     <title>Study.Com</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Theamstyle.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Theamstyle.css">
 
 
 
