--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar h-nav-resp">
         <ul class="nav-list v-class-resp">
             <div class="logo">
-                <img src="img/logo.jpg" alt="logo">
+                <img src="logo.jpg" alt="logo">
             </div>
             <li><a href="#">Home</a></li>
             <li><a href="free.html">Free</a></li>
@@ -30,7 +30,7 @@
             <li><a href="myFile.html" target="-blank">MyFile</a></li>
 
             <div class="container">
-                <img src="img/moon.png" id="icon">
+                <img src="moon.png" id="icon">
             </div>            
         </ul>
         
@@ -53,13 +53,13 @@
             </div>
 
             <div class="secondHalf">
-                <img src="img/computer.jpeg" alt="computer Image">
+                <img src="computer.jpeg" alt="computer Image">
             </div>
         </div>
 
 
         <div class="letsStart">
-            <a href="letsStart.html"><img src="img/letsStart.png" alt=""></a>
+            <a href="letsStart.html"><img src="letsStart.png" alt=""></a>
         </div>
     </section>
 
